<resources>
    <string name="app_name">Pentatonic</string>
    <string name="title_activity_home">Pentatonic</string>
    <string name="title_lounge">라운지</string>
    <string name="title_studio">스튜디오</string>
    <string name="title_artist">아티스트</string>
    <string name="title_my_page">마이페이지</string>
    <string name="lounge_title_text">Pentatonic</string>
    <string name="rising_band_cover_title_text">떠오르는 밴드 커버</string>
    <string name="rising_solo_cover_title_text">떠오르는 솔로 커버</string>
    <string name="login_id_hint_text">아이디를 입력해주세요.</string>
    <string name="login_pw_hint_text">비밀번호를 입력해주세요.</string>
    <string name="login_button_text">로그인</string>
    <string name="login_register_button_text">가입하기</string>
    <string name="login_pw_forget_text">비밀번호를 잊으셨나요?</string>
    <string name="register_title_text">환영합니다!</string>
    <string name="register_id_title_text">아이디</string>
    <string name="register_id_hint_text">6자 이상 영문과 숫자로 구성된 아이디를 설정해주세요</string>
    <string name="register_id_edit_text_hint_text">아이디를 입력해주세요</string>
    <string name="register_pw_title_text">비밀번호</string>
    <string name="register_pw_hint_text">7 ~ 25자 이내의 비밀번호를 설정해주세요</string>
    <string name="register_pw_edit_text_hint_text">비밀번호를 입력해주세요</string>
    <string name="register_pw_confirm_hint_text">비밀번호를 다시 한 번 입력해주세요</string>
    <string name="register_nickname_title">닉네임</string>
    <string name="register_nickname_hint_text">2글자 이상의 닉네임을 설정해주세요</string>
    <string name="register_nickname_edit_text_hint_text">닉네임을 입력해주세요</string>
    <string name="register_user_type_title_text">사용자 유형</string>
    <string name="register_user_type_hint_text">음악이 본업인지, 취미인지, 혹은 청취자인지 알려주세요</string>
    <string name="register_user_type_musician">본업</string>
    <string name="register_user_type_hobby">취미</string>
    <string name="register_user_type_listener">리스너</string>
    <string name="register_goto_next_button_text">다음으로</string>
    <string name="verify_title_text">휴대전화 인증</string>
    <string name="verify_hint_text">원활한 서비스 이용을 위해 실명 인증을 진행합니다.\nSMS로 인증번호를 전송합니다.</string>
    <string name="verify_phone_number_hint_text">휴대폰 번호를 입력해주세요 (\'-\' 제외)</string>
    <string name="verify_auth_code_hint_text">수신받은 인증번호를 입력해주세요.</string>
    <string name="verify_send_auth_code_button_text">인증번호 전송하기</string>
    <string name="verify_register_text">인증 및 가입하기</string>
    <string name="rising_solo_title_text">떠오르는 솔로 커버</string>
    <string name="rising_solo_hint_text">새롭게 떠오르는 <b>솔로 커버를</b>\n감상해보세요!</string>
    <string name="rising_band_title_text">떠오르는 밴드 커버</string>
    <string name="rising_band_hint_text">새롭게 떠오르는 <b>밴드 커버를</b>\n감상하고 참여해보세요!</string>
    <string name="session_setting_title_text">밴드를 구성할 <b>세션</b>과\n<b>최대 인원</b>을 지정합니다</string>
    <string name="solo_cover_session_setting_title_text">커버할 <b>세션</b>을 선택합니다</string>
    <string name="band_cover_ranking_title_text">밴드 커버 랭킹</string>
    <string name="artist_ranking_title_text">아티스트 랭킹</string>
    <string name="band_ranking_page_title_text">좋아요를 가장 많이 받은\n<b>밴드</b>는 누구일까요?</string>
    <string name="artist_ranking_page_title_text">좋아요를 가장 많이 받은\n<b>아티스트</b>는 누구일까요?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="whole_cover_title_text">펜타토닉의 <b>모든 커버</b>를\n탐색해보세요.</string>

    <string name="band_delete_notice_title">밴드를 삭제하시겠습니까?</string>
    <string name="band_delete_notice_content">한 번 삭제된 밴드는 <b>복구할 수 없습니다.</b>\n그래도 삭제하시겠습니까?</string>

    <string name="comment_delete_notice_content">해당 댓글을 삭제하시겠습니까?</string>

    <string name="cover_delete_notice_title">해당 커버를 삭제하시겠습니까?</string>
    <string name="cover_delete_notice_content">한 번 삭제된 커버는 <b>복구할 수 없습니다.</b>\n그래도 삭제하시겠습니까?</string>

    <string name="logout_title">로그아웃하시겠습니까?</string>

    <string name="yes_text">네</string>
    <string name="no_text">아니요</string>
</resources>