<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_lounge">

    <fragment
        android:id="@+id/navigation_lounge"
        android:name="com.team_gdb.pentatonic.ui.lounge.LoungeFragment"
        android:label="@string/title_lounge"
        tools:layout="@layout/fragment_lounge" >

        <action
            android:id="@+id/action_navigation_lounge_to_navigation_weekly_challenge"
            app:destination="@id/navigation_weekly_challenge"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_weekly_challenge"
        android:name="com.team_gdb.pentatonic.ui.weekly_challenge.WeeklyChallengeFragment"
        tools:layout="@layout/fragment_weekly_challenge" />

    <fragment
        android:id="@+id/navigation_studio"
        android:name="com.team_gdb.pentatonic.ui.studio.StudioFragment"
        android:label="@string/title_studio"
        tools:layout="@layout/fragment_studio" />

    <fragment
        android:id="@+id/navigation_artist"
        android:name="com.team_gdb.pentatonic.ui.artist.ArtistFragment"
        android:label="@string/title_artist"
        tools:layout="@layout/fragment_artist" />

    <fragment
        android:id="@+id/navigation_my_page"
        android:name="com.team_gdb.pentatonic.ui.my_page.MyPageFragment"
        android:label="@string/title_my_page"
        tools:layout="@layout/fragment_my_page" />
</navigation>