<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:id="@+id/parentLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.LoginActivity">

        <ImageView
            android:tintMode="src_over"
            app:tint="#80000000"
            android:src="@drawable/login_background"
            android:scaleType="centerCrop"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <ImageView
            android:id="@+id/logo"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="150dp"
            android:src="@drawable/pentatonic_white" />

        <EditText
            android:id="@+id/idEditText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/logo"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/custom_radius_background_white"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:drawablePadding="8dp"
            android:hint="@string/login_id_hint_text"
            android:paddingHorizontal="16dp"
            android:textColor="@color/black"
            android:textColorHint="@color/lb_grey"
            android:text="@={viewModel.idField}"
            android:textSize="14sp" />

        <EditText
            android:hint="@string/login_pw_hint_text"
            android:textSize="14sp"
            android:inputType="textPassword"
            android:drawablePadding="8dp"
            android:text="@={viewModel.passwordField}"
            android:id="@+id/passwordEditText"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="8dp"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:paddingHorizontal="16dp"
            android:textColor="@color/black"
            android:layout_below="@+id/idEditText"
            android:textColorHint="@color/lb_grey"
            android:background="@drawable/custom_radius_background_white"
            android:layout_width="match_parent"
            android:layout_height="60dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/passwordEditText"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/custom_radius_background_light"
            android:backgroundTint="@color/main_regular_transparent"
            android:fontFamily="@font/nanum_extrabold"
            android:paddingHorizontal="16dp"
            android:text="@string/login_button_text"
            android:textColor="@color/white" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/custom_radius_background_dark"
            android:backgroundTint="@color/main_dark_transparent"
            android:fontFamily="@font/nanum_extrabold"
            android:paddingHorizontal="16dp"
            android:text="@string/login_register_button_text"
            android:textColor="@color/white" />

    </RelativeLayout>

    <data>
        <variable
            name="login"
            type="com.team_gdb.pentatonic.ui.login.LoginActivity" />
        <variable
            name="viewModel"
            type="com.team_gdb.pentatonic.ui.login.LoginViewModel" />
    </data>
</layout>